--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         }
     },
 	"require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "ext-curl": "*",
+        "ext-json": "*"
     }
 }
