--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 	"require": {
         "php": ">=7.1",
         "ext-curl": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-intl": "*"
     }
 }
