--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "keiwen/utils",
     "type": "library",
-    "description": "Common utils fonctions",
-	"version": "2.4",
+    "description": "Common utils functions",
+	"version": "2.5",
     "autoload": {
         "psr-4": {
             "Keiwen\\Utils\\": ""
